--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.24.0",
     "esbuild": "^0.11.20"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "esbuild /src/index.ts --watch --bundle --outfile=dist/index.js",
-    "buile": "esbuild /src/index.ts --minify --pure:console.log --bundle --outfile=build/dist/index.js && cp index.html build/"
+    "start": "esbuild ./src/index.ts --watch --bundle --outfile=dist/index.js",
+    "buile": "esbuild ./src/index.ts --minify --pure:console.log --bundle --outfile=build/dist/index.js && cp index.html build/"
   },
   "keywords": [],
   "author": "forJihye <qkrwlgp76@gmail.com> (https://github.com/forJihye)",
